--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@base-ui/react": "^1.1.0",
     "@hookform/resolvers": "^5.2.2",
+    "@types/mongoose": "^5.11.96",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -19,6 +20,7 @@
     "input-otp": "^1.4.2",
     "lenis": "^1.3.17",
     "lucide-react": "^0.563.0",
+    "mongoose": "^9.1.5",
     "motion": "^12.31.0",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
