--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,3 +5,16 @@ compatibility_flags = ["nodejs_compat"]
 
 # Assets configuration for serving static files
 assets = { binding = "ASSETS", directory = ".open-next/assets" }
+
+# Environment variables for the application
+[vars]
+# Note: For production, set MONGODB_URI in Cloudflare Dashboard
+# This is just a placeholder for local development
+MONGODB_URI = "mongodb+srv://placeholder"
+
+# Bind environment variables to the worker
+[env.production]
+vars = { MONGODB_URI = "your_production_mongodb_uri_here" }
+
+[env.preview]
+vars = { MONGODB_URI = "your_preview_mongodb_uri_here" }
